--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -163,3 +163,6 @@ obj-$(CONFIG_POWERCAP)		+= powercap/
 obj-$(CONFIG_MCB)		+= mcb/
 obj-$(CONFIG_RAS)		+= ras/
 obj-$(CONFIG_THUNDERBOLT)	+= thunderbolt/
+
+# Android non-staging drivers
+obj-$(CONFIG_ANDROID)  += android/
