mt8163: Add an RGB configuration sys attr driver for videox/corr10
Adds the RGB configuration node which leverages the gamma subsystem to
perform color correction.

The new node takes rgb triplets that range from 0-2000 each, computes
the gamma registers and dispatches them to the gamma correction
subsystem.

cherry-picked from: https://github.com/MediatekAndroidDevelopers/android_kernel_uhans_h5000/commit/01335cebfbac2302854d0d58a09bedc0145e3fe3

created by @defer

Change-Id: I8fd328f66f4ce36d613fb8f6b3c8445077b0793a
Signed-off-by: Kai Jones <zaksenoj@icloud.com>

--- a/arch/arm64/configs/lineage_aquaris_m8_defconfig
+++ b/arch/arm64/configs/lineage_aquaris_m8_defconfig
@@ -206,6 +206,7 @@ CONFIG_MTK_LCM=y
 CONFIG_CUSTOM_KERNEL_LCM="inn080dp10v5_dsi_vdo_tps65132"
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
+CONFIG_MTK_VIDEOX_CYNGN_LIVEDISPLAY=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 CONFIG_LCM_HEIGHT="800"
 CONFIG_LCM_WIDTH="1280"
