--- a/arch/arm64/configs/bq_aquaris_m10_FHD_defconfig
+++ b/arch/arm64/configs/bq_aquaris_m10_FHD_defconfig
@@ -206,6 +206,7 @@ CONFIG_MTK_LCM=y
 CONFIG_CUSTOM_KERNEL_LCM="b101uan07_dsi_vdo_tps65132"
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
+CONFIG_MTK_VIDEOX_CYNGN_LIVEDISPLAY=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="90"
 CONFIG_LCM_HEIGHT="1920"
 CONFIG_LCM_WIDTH="1200"
