mt8163: Update .gitignore for align it with bq kernel source

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@
 *.so
 *.so.dbg
 *.mod.c
-*.i
 *.lst
 *.symtypes
 *.order
@@ -46,7 +45,7 @@ Module.symvers
 /vmlinuz
 /System.map
 /Module.markers
-
+out/
 #
 # Debian directory (make deb-pkg)
 #
