--- a/arch/arm64/configs/lineage_freezerfhd_defconfig
+++ b/arch/arm64/configs/lineage_freezerfhd_defconfig
@@ -457,6 +457,11 @@ CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_UBIFS_FS=y
 CONFIG_UBIFS_FS_ADVANCED_COMPR=y
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_EXFAT_VIRTUAL_XATTR=y
+CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:vfat:s0
 CONFIG_SDCARD_FS=y
 # CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_NLS_CODEPAGE_437=y
