arm64/configs: mt8163: enable UID_SYS_STATS

--- a/arch/arm64/configs/lineage_freezerfhd_defconfig
+++ b/arch/arm64/configs/lineage_freezerfhd_defconfig
@@ -491,3 +491,9 @@ CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_LIBCRC32C=y
+CONFIG_MEMCG_SWAP_ENABLED=y
+CONFIG_TASKSTATS=y
+# CONFIG_TASK_DELAY_ACCT is not set
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
+CONFIG_UID_SYS_STATS=y
